<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">MTerminal</string>
    <string name="default_notification_channel_id">default</string>
    <string name="default_device_address">01</string>
    <string name="start_message_number">0</string>
    <string name="hex_number">0x00</string>
    <string name="hex_prefix">0x</string>

    <string name="find_devices">Показать доступные устройства</string>
    <string name="switch_bluetooth">Переключатель bluetooth</string>
    <string name="change_device">Сменить устройство</string>
    <string name="send_button">Послать запрос</string>
    
    <string name="available_device">Доступные устройства</string>
    <string name="request">Запрос</string>
    <string name="response">Ответ</string>
    <string name="device_name">Имя устройства</string>
    <string name="first_register_number">Номер первого регистра</string>
    <string name="first_byte_address">Адрес первого байта выборки</string>
    <string name="command_number">Номер команды</string>
    <string name="number_bytes">Количество байт выборки</string>
    <string name="number_registers">Количество регистров</string>
    <string name="number_register">Номер регистра</string>
    <string name="control_signal_code">Код управляющего сигнала</string>
    <string name="value">Значение</string>
    <string name="sub_command">Подкоманда</string>
    <string name="data">Данные</string>
    <string name="device_address">Адрес</string>
    <string name="data_write">Записываемые данные</string>
    <string name="command_data">данные команды</string>
    <string name="data_whitespace_separate">Данные через пробел</string>

    <string name="toggle_off">Старт</string>
    <string name="toggle_on">Стоп</string>
    <string name="message_counter">Всего запросов</string>
    <string name="message_error_counter">Ошибки</string>

    <string name="exception_invalid_command">Недопустимая команда</string>
    <string name="exception_invalid_data_address">Недопустимый адрес данных</string>
    <string name="exception_invalid_data_value">Недопустимое значение данных</string>
    <string name="exception_detection_unit_failure">Отказ блока детектирования</string>
    <string name="exception_detection_unit_busy">Блок детектирования занят выполнением предыдущей команды</string>

    <string name="status_disconnect">Соединение потеряно</string>
    <string name="status_connected">"Статус: активно"</string>
    <string name="status_unable_connect">"Невозможно подключиться"</string>
    <string name="status_reconnect">"Статус: пересоединение…"</string>

    <string name="toast_connection_active">Соединение установлено</string>
    <string name="toast_connection_failed">Подключение не удалось</string>
    <string name="toast_reconnection">Переподключение…</string>
    <string name="toast_change_device">Пожалуйста, подключитесь к устройству</string>
    <string name="toast_turned_on">Включено</string>
    <string name="toast_turned_off">Выключено</string>
    <string name="toast_invalid_data">Некоректные данные</string>

    <dimen name="TextView">30sp</dimen>
    <dimen name="Counter">20sp</dimen>

    <string-array name="command" >
        <item>Выберите команду</item>
        <item>Ручной ввод комманды</item>
        <item>Считать состояние двоичных сигналов</item>
        <item>Считать состояние регистров управления</item>
        <item>Считать состояние регистров данных</item>
        <item>Подать управляющий сигнал</item>
        <item>Изменить состояние регистра управления</item>
        <item>Считать слово состояния</item>
        <item>Диагностика</item>
        <item>Считать выборку накапливаемого спектра</item>
        <item>Изменить состояние регистров управления</item>
        <item>Считать идентификационный код устройства</item>
        <item>Считать выборку калибровочных данных</item>
        <item>Записать выборку калибровочных данных</item>
        <item>Считать накопленный спектр</item>
        <item>Считать накопленный спектр в сжатом виде с перезапуском набора</item>
        <item>Считать накопленный спектр в сжатом виде</item>
        <item>Тест комманда 7</item>
    </string-array>
</resources>